hotal.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task3a-deployment
  labels:
    app: task3a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task3a
  template:
    metadata:
      labels:
        app: task3a
    spec:
      containers:
        - name: task3a-cont
          image: kondavenkat035/hotal:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: task3a-cluster-service
spec:
  selector:
    app: task3a
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
