train.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-deployment
  labels:
    app: train
spec:
  replicas: 3
  selector:
    matchLabels:
      app: train
  template:
    metadata:
      labels:
        app: train
    spec:
      containers:
        - name: train-cont
          image: kondavenkat035/train:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: train-service
spec:
  selector:
    app: train
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
