ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /train
            pathType: Prefix
            backend:
              service:
                name: train-service
                port:
                  number: 80

          - path: /hotel
            pathType: Prefix
            backend:
              service:
                name: hotel-service
                port:
                  number: 80
